--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Test_Data/SCHEDULES_ALL_ALL_DIR_01DEC2019_31DEC2019 Yes CodeShare.csv
+Test_Data/SCHEDULES_ALL_ALL_DIR_01DEC2019_31DEC2019_No Codeshare.csv
